--- a/src/components/estilos/ventanaDetalle.css
+++ b/src/components/estilos/ventanaDetalle.css
@@ -33,7 +33,7 @@
     background-color: var(--clarito);
     border: 10px solid var(--secundario);
     border-radius: 25px;
-    height: 40vh;
+    height: 45vh;
     width: 50%;
     padding: 40px;
 }
@@ -42,6 +42,8 @@
 .detalles h1 {
     color: var(--secundario);
     font-size: 70px;
+    text-align: center;
+    padding: 25px 0 0 0;
 }
 
 .detalles p {
